# gadgetron

gadgets/: CMakeLists.txt
gadgets/mri_core/: AcquisitionAccumulateTriggerGadget.cpp
gadgets/radtse/: CMakeLists.txt  RadTseEchoShareGadget.cpp  RadTseEchoShareGadget.h  RadTseTools.cpp  RadTseTools.h  RadTseTrajGadget.cpp  RadTseTrajGadget.h  comment  gadgetron_radtse_export.h
gadgets/radtse/config/: myRadial.xml  radtse_parameter_map.xsl  radtse_parameters.xml
